--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.1",
     "flag-icons": "^6.1.1",
     "google-spreadsheet": "^3.2.0",
     "papaparse": "^5.3.1",
