--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "prepare": "husky install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "rename-index": "node -e \"require('fs').rename('./build/index.html', './build/200.html', (err) => { console.log(err ? err : 'File renamed!') })\"",
-    "predeploy": "npm run build && npm run rename-index",
+    "predeploy": "npm run build",
     "deploy": "surge --project ./build --domain post-to-stop-war.surge.sh"
   },
   "eslintConfig": {
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "husky": "^7.0.4",
     "surge": "^0.23.1"
   }
 }
