--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "post-to-stop-war",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rudnitskih.github.io/post-to-stop-war/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -23,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "surge --project ./build --domain post-to-stop-war.surge.sh"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "surge": "^0.23.1"
   }
