--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "post-to-stop-war",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rudnitskih.github.io/post-to-stop-war/",
+  "homepage": "post-to-stop-war.in.ua",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
