--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "post-to-stop-war",
   "version": "0.1.0",
   "private": true,
-  "homepage": "post-to-stop-war.in.ua",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -23,8 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "rename-index": "node -e \"require('fs').rename('./build/index.html', './build/200.html', (err) => { console.log(err ? err : 'File renamed!') })\"",
+    "predeploy": "npm run build && npm run rename-index",
+    "deploy": "surge --project ./build --domain post-to-stop-war.in.ua"
   },
   "eslintConfig": {
     "extends": [
