--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-masonry-css": "^1.0.16",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "showdown": "^2.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
