Add support for three columns in messages, add basic Readme

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "post-to-stop-war",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name" : "Dmytro Rudnytskykh",
+    "email" : "rudnitskih@gmail.com"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
