Refactor utils files, add sentry, add general google spreadsheet parser

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "author": {
-    "name" : "Dmytro Rudnytskykh",
-    "email" : "rudnitskih@gmail.com"
+    "name": "Dmytro Rudnytskykh",
+    "email": "rudnitskih@gmail.com"
   },
   "dependencies": {
+    "@sentry/react": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
