--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@sentry/react": "^6.18.2",
     "@sentry/tracing": "^6.18.2",
     "classnames": "^2.3.1",
+    "copy-to-clipboard": "^3.3.1",
+    "flag-icons": "^6.1.1",
+    "google-spreadsheet": "^3.2.0",
     "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
