--- a/package.json
+++ b/package.json
@@ -25,14 +25,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "prepare": "husky install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "rename-index": "node -e \"require('fs').rename('./build/index.html', './build/200.html', (err) => { console.log(err ? err : 'File renamed!') })\"",
-    "predeploy": "npm run build && npm run rename-index",
-    "deploy": "surge --project ./build --domain https://post-to-stop-war.in.ua & gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -51,10 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "husky": "^7.0.4",
-    "surge": "^0.23.1"
   }
 }
