--- a/package.json
+++ b/package.json
@@ -6,23 +6,19 @@
     "name": "Dmytro Rudnytskykh",
     "email": "rudnitskih@gmail.com"
   },
+  "devDependencies": {
+    "react-scripts": "5.0.0",
+    "sass": "^1.49.9"
+  },
   "dependencies": {
     "@sentry/react": "^6.18.2",
     "@sentry/tracing": "^6.18.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
-    "flag-icons": "^6.1.1",
-    "google-spreadsheet": "^3.2.0",
     "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-masonry-css": "^1.0.16",
-    "react-scripts": "5.0.0",
-    "sass": "^1.49.9",
-    "showdown": "^2.0.3",
-    "web-vitals": "^2.1.4"
+    "showdown": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
