--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-masonry-css": "^1.0.16",
+    "react-select": "^5.2.2",
     "showdown": "^2.0.3"
   },
   "scripts": {
