--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@sentry/react": "^6.18.2",
     "@sentry/tracing": "^6.18.2",
+    "airtable": "^0.11.3",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
     "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-masonry-css": "^1.0.16",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-select": "^5.2.2",
     "showdown": "^2.0.3"
   },
