--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "airtable": "^0.11.3",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
+    "file-saver": "^2.0.5",
     "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
