--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "react-scripts": "5.0.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "source-map-explorer": "^2.5.2"
   },
   "dependencies": {
     "@sentry/react": "^6.18.2",
@@ -27,6 +28,7 @@
     "showdown": "^2.0.3"
   },
   "scripts": {
+    "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
