--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "email": "rudnitskih@gmail.com"
   },
   "devDependencies": {
+    "axios": "^1.1.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "source-map-explorer": "^2.5.2"
